--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "tslint": "^5.3.2",
     "tslint-eslint-rules": "^4.1.0",
     "tslint-react": "^3.0.0",
+    "tslint-config-prettier": "^1.13.0",
     "webpack": "^3.6.0"
   },
   "devDependencies": {
