--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
-    "pre-commit": "1.x"
+    "pre-commit": "1.x",
+    "tslint-config-prettier": "^1.13.0"
   },
   "peerDependencies": {
     "typescript": "^2.2.1"
